@@ -1,3 +1,7 @@
+- make IE compatible? (pre-beta2)
+
+- view input files   (pre-beta1)
+- delete input files (pre-beta1)
 - dubbele inputnaam! (pre-beta1)
 - input van URL      (pre-beta1)
 
